@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST gnumeric-1.12.18.tar.xz 18064824 SHA256 402224f858cfa4e91503ab1be0491fa3322713dabe56b6eae171def8b736d9e9 SHA512 241a80d79d1d20f484b2e262b86c6dd12192842b5baf7f11c3402b63810f1e67080b6ec44f05a1de88ae3f0cd476cd9ffb2ecbebe2cdf9104bb45287c8e5b8b9 WHIRLPOOL 8b646780e493d3bbb1ee357876481c2a19115bfed3909db0fddf212fc6ba808493e2c7c477efc13d23240aa36ba6957b3041d96c260fe155a5157530fdefcdbf
 DIST gnumeric-1.12.20.tar.xz 18440828 SHA256 4d491147e973afc0302823047780027c255a91343d839cf17562a852f42c21cd SHA512 12c58ff1fa802459529f273c9df4962ee6b5056f03539ab9a9351816cfabb706e1832a3eb365a12083a7c11c9bd35d63af3d2558116842c4e3fea50bab3c05ee WHIRLPOOL 55654477f5ff43b8a99263c10d537c70d083768da064b98f2f7387b989ae28c5ddf238f288c0297e5e7b552d99978ae99e410050624dc1b600351bfaa49b4e1d
+DIST gnumeric-1.12.21.tar.xz 18460624 SHA256 6eed42120babb7b2a857115f2ad6320bf255c7bd71a939344e5a6df744a09ef4 SHA512 5341cf04fe0f1115e8bda53fce57650b44195d482abef5f9f8c5683de756007df5f167d5df0ae2ea5a40d06b7cce3ab67233d49cbe28a32eadbd1dced16c773d WHIRLPOOL 3339aab18bd2bcf4c32417d7b92093c9deac730553fc79046e6138ed4c6234d2830c8c3392493b7e314c4c87983f36b9c385f69c020538426c4f2788900c9338
 EBUILD gnumeric-1.12.18.ebuild 1594 SHA256 a7330712b8b84b256e4956e2d8803e77bc5ed3894a04cb134aac9a002e73c81f SHA512 e468a29f6a7c9b891388dcbb20f426c8ccd4b76dda30084d450620535787a94b615894da4f42bdef4457b4b099ba273a099e5540209e48f31ae56551f06b1f76 WHIRLPOOL 206d05501fa2625d3f79c47f5a913da96dec0334728c23fc881c3c11c930322cb46eee6e58ad348c4a96c35dbd0ae93980df356c0009f11828272f20384993c2
 EBUILD gnumeric-1.12.20.ebuild 1596 SHA256 d770f5ed7f17950be58369c5c4f86cf42547fdc91623be709e4501362c00dd40 SHA512 aa3d266c8dc7ecb598aaf2e69407d14d17c70317f4774bd645cc5c56611f7eb1b57c5a1da97890e2246c60054ed07ec9c4fffc51c944cfc5c34dfe0ebce7f425 WHIRLPOOL b0ed58e18219a6a00ef1e2718588eadb9723c5ad91642e93c1e1f10818dafc22550b5721f0e53cb575a7186994ff85e8df87a06bd53e33f750238fa049192eab
-MISC ChangeLog 38883 SHA256 cc09993cbfb0726b9954e4781bb882904dff02c3ede605c7162af5852c1e16c4 SHA512 9a00db99838b70ecab3d89b149cec18890ecc0ce3797bd29f89595b67faa0db33af941a2fd44b53be554b45f452569e26d791baf1c6645985727f9b6900cd048 WHIRLPOOL 6097092896270326a3ea494b4a7cc51860dfca2e95dbc5c0b33c173b7958da0ff1cff2b97b6b3eb9c6680a3419900d8caf13bea41dfd16394cba8addc4bde9f6
+EBUILD gnumeric-1.12.21.ebuild 1596 SHA256 26ed6dd922164330190502b4ae3808548381683839e4ae4a0280e8e2827723c7 SHA512 2f80de2a9ba90ef94a4837a707a8507846013f3de3a9a78dabc557bf8e103c3c72b9001a48210f4ac1870cdae0bb4b345983a5e02256aab3f4593491b80d1de8 WHIRLPOOL 92eb95db38cbf5fad456896b84675ca0e98afe4ca8c80f9fe3b69e6622bf2c9d8ed2dac69d64ab23900c6b80c845b115e65755cd5ccec39f3580cbb7365ea1ac
+MISC ChangeLog 39004 SHA256 040e21fb3f6b7e7a84041a62f0e2af98ae2cde81cdbe9d1006e5dfc1be1ebc8f SHA512 bd2d552d86e04a3ffbee6c9b0f7657a4100d0e84cbc8223751e293330e746abf8858312380c88bd854591ec623f454fe920d17edf97428f0f3bfd4c22ee76bb3 WHIRLPOOL 4e15235ea3f2a15b11d2da9bac4673117782da097d4af720f6c180619ff35a40f9303fbc56140b93c2b4172b04987d2a02daf0e1450e63cb5a7851da5a5d0173
 MISC metadata.xml 381 SHA256 62ca3ef5ae5a5c0443e9ab858424733291f62c080115b0a08b2d1cbfcc17ee75 SHA512 c50ea74e4db4ffadd19e5ca582fce83fe9ab1511613bef5db7f7c07b682a35bb47f398a1e245cf3ef077d4df4872483f41666fd5473cbd6ebce201e65292cc03 WHIRLPOOL 6a6ea6ca7ca29840551e68066f0274bcc612dffe099e1505fccb46d0ca06c18d3439144a708b986d7e8f5a54b1088852f5d587a82b797c6232395a4607af86ee
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlT62M0ACgkQCaWpQKGI+9T6lACaApR+UyEoEe4kZxus0R8hG8IP
-14AAn156iriqO1X0MWcdIDmTchZit4U9
-=XmgF
+iEYEAREIAAYFAlT7EQwACgkQCaWpQKGI+9QAPACfaTlAe2n/FIjNFhh2BlosopcV
+z2sAnjQotWoX4lfluEQmsXqBwnlb7sYR
+=KrGd
 -----END PGP SIGNATURE-----
